3.4.0 2024xxxx
BF: Platform: Optimization and corrections
BF: DiskPart: Optimization when attaching disks with the same label
BF: DiskPart: Correction when creating with Windows 11
CR: Macros: Optimization of the use of WORKDIR
CR: Macros: Usable as direct short commands
CR: Project: Updated TargetFrameworkVersion to v4.8
CR: Platform: Refactoring of the standard directory structure
    - Spaces in the path have been omitted
    - Formerly Database is now part of Storage
    - Formerly Install is now part of Resources
    - Core components of the platform are located in /Programs/Platform
    + Documents
      + Music
      + Pictures
      + Videos
    + Programs
      + Macros
        + macros
      + Platform
    + Resources
    + Settings
    + Storage
    + Temp

3.3.0 20230710
BF: Settings: Spaces at the end of values are now ignored
BF: Launcher: Correction/optimization of the output if the HotKey cannot be registered
CR: Build: Releases are now only available on the release page
CR: Macros: Added to temporarily change the command line configuration
    Create your own macros as cmd-file in Program Portables/Macros/macros.
    Call: 'macro [macro]' or 'macros [macro]' on the command line.
CR: Platform: Added batch processing freeze detection
    Detects freezing script on attach and detach the platform and causes
    error instead of freezing itself.
CR: ShiftDown: Omission of ShiftDown as standard tool
CR: ShiftDown: Renaming in Balancer
CR: ShiftDown: Outsourcing as a separate project

3.2.0 20220625
BF: Build: Correction of the release info process
BF: Launcher: Correction of the behavior when the screen resolution changes
    Triggers the update of the user interface.
BF: Platform: Existing shortcuts are now overwritten
CR: Platform: Optimization when detaching / process termination
    Killing of processes can be blocked by system protection.
    It is tried up to three times and then ignored.
CR: Platform: Integrated settings as a core component